--- a/src/pages/dashboard/Dashboard.css
+++ b/src/pages/dashboard/Dashboard.css
@@ -32,6 +32,7 @@
 
 .search-box {
     background-color: white;
+    border: 2px solid #F26853;
     height: 50px;
     width: 300px;
     margin-top: 2rem;
@@ -60,7 +61,7 @@
 .addCardDiv {
     /* background-color: brown; */
     width: 80%;
-    height: 7%;
+    height: 6%;
     margin: 1rem 0;
     display: flex;
     align-items: center;
@@ -75,19 +76,7 @@
     align-items: center;
 }
 
-.addCardPlus {
-    /* background-color: darkolivegreen; */
-    width: 25%;
-    height: 60%;
-    margin-left: 1rem;
-}
 
-.addCardText {
-    /* background-color: darkblue; */
-    width: 60%;
-    height: 60%;
-    margin-left: 1rem;
-}
 
 .trending-div-title {
     /* background-color: tomato; */
@@ -98,7 +87,7 @@
 .trending-div {
     /* background-color: darkgoldenrod; */
     width: 95%;
-    height: 10%;
+    height: 250px;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -109,32 +98,92 @@
 
 
 .trendingFoodCard {
-    background-color: darkkhaki;
-    background-image: url('../../imgs/home/sandwich.jpg');
+    /* background-color: darkkhaki; */
     background-size: cover;
     border-radius: 20px;
     width: 300px;
-    height: 95%;
+    height: 200px;
     margin-left: 2rem;
     overflow: hidden;
 }
 
+
+
+.trendingFoodCardImg {
+    /* background-color: #F26853; */
+    background-image: url('../../imgs/home/sandwich.jpg');
+    background-size: cover;
+    border-radius: 20px 20px 20px 20px;
+    width: 100%;
+    height: 150px;
+}
+
 .trendingFoodCardText {
-    background-color: rgba(0, 0, 0, 0.519);
+    /* background-color: rgba(0, 0, 0, 0.519); */
     width: 100%;
     height: 50px;
 }
 
 .trendingFoodCardText h5 {
-    color: white;
+    color: black;
     font-size: 18px;
     margin-left: 10px;
 }
 
 .trendingFoodCardText p {
-    color: white;
+    color: black;
     font-size: 15px;
     margin-left: 10px;
+}
+
+.createCardDiv {
+    background-color: #F26853;
+    background-image: url('../../imgs/dashboard/plate.png');
+    border: 1px solid black;
+    background-size: 250px;
+    background-position: center;
+    border-radius: 50%;
+    width: 220px;
+    height: 220px;
+    margin-left: 2.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.createCard {
+    /* background-color: #ABC9D5; */
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    height: 60%;
+    width: 100%;
+}
+
+.addCardPlus {
+    /* background-color: darkolivegreen; */
+    width: 100%;
+    height: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 3rem;
+    color: black;
+}
+
+.addCardText {
+    /* background-color: darkblue; */
+    width: 100%;
+    height: 40%;
+}
+
+.addCardText h3 {
+    color: black;
+}
+
+.addCardText h4 {
+    color: #474747;
 }
 
 .categories {
@@ -152,11 +201,11 @@
 }
 
 .categoryCardDiv {
-    /* background-color: sandybrown; */
+    background-color: sandybrown;
     width: 85%;
-    height: 40%;
+    height: 50%;
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-around;
     flex-wrap: wrap;
 }
 
@@ -165,6 +214,7 @@
     background-image: url('../../imgs/dashboard/steak.jpg');
     background-size: cover;
     height: 250px;
-    width: 20%;
-    margin-left: 1rem;
+    width: 400px;
+    border-radius: 10px;
+    color: white;
 }
