--- a/src/pages/dashboard/Dashboard.css
+++ b/src/pages/dashboard/Dashboard.css
@@ -211,10 +211,33 @@
 
 .categoryCard {
     background-color: darkorchid;
-    background-image: url('../../imgs/dashboard/steak.jpg');
+    /* background-image: url('../../imgs/dashboard/steak.jpg'); */
     background-size: cover;
     height: 250px;
-    width: 400px;
+    width: 250px;
     border-radius: 10px;
     color: white;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+
+.categoryCardText {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+.categoryCardText h3 {
+    background-color: #474747;
+    width: 100%;
+    height: 50%;
+}
+
+.categoryCardText p {
+background-color: #F26853;
+width: 100%;
+height: 50%;
 }
