--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 80px
+    height: 80px;
+    width: 100%;
+    box-shadow: #474747 0px 4px 8px;
+    z-index: 2;
 }
 
 .logo {
