--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -29,7 +29,7 @@
 }
 
 .form-header img {
-    width: 40%;
+    max-width: 20rem;
     height: 90%;
     margin-top: 1rem;
     margin-bottom: 1rem;
@@ -47,23 +47,24 @@
 }
 
 .col button {
-    background-color: white;
+    background-color: #F26853;
     border: 1px solid #F26853;
     width: 10rem;
     height: 2.5rem;
     cursor: pointer;
-    color: black;
+    color: white;
     margin-bottom: 0.5rem;
+    transition: 0.5s;
 }
 
 .col button:hover {
-    background-color: #F26853;
     color: white;
+    transform: scale(1.1);
 }
 
 .header {
     text-align: center;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
     width: 100%;
 }
 
@@ -82,6 +83,25 @@
     border: 1px solid #F26853;
     text-indent: 10px;
     margin-bottom: 1.1rem;
+    border-radius: 5px;
+}
+
+
+.input-wrapper-create {
+    /* background-color: darkgray; */
+    width: 60%;
+    margin: 0.2em;
+    display: flex;
+    justify-content: center;
+
+}
+
+.input-wrapper-create input{
+    width: 100%;
+    height: 2rem;
+    border: 1px solid #F26853;
+    text-indent: 10px;
+    margin-bottom: 1.0rem;
     border-radius: 5px;
 }
 
@@ -117,5 +137,5 @@
 }
 
 .pCreate a:hover {
-    color: white;
+    color: #53ddf2;
 }
