--- a/src/pages/addMeal/AddMeal.css
+++ b/src/pages/addMeal/AddMeal.css
@@ -1,5 +1,5 @@
 .add-page-ctn {
-    background-color: darkcyan;
+    /* background-color: darkcyan; */
     height: 100%;
     width: 100%;
     display: flex;
@@ -8,7 +8,181 @@
 }
 
 .add-page-div {
-    background-color: darkred;
+    /* background-color: darkblue; */
     width: 80%;
     height: 50%;
+    display: flex;
+    flex-direction: column;
+    align-content: space-between;
+    flex-wrap: wrap;
+    border-radius: 40px;
+    /* box-shadow: #474747 6px 8px 8px; */
+}
+
+.add-column {
+    /* background-color: rebeccapurple; */
+    height: 100%;
+    width: 23%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    border-radius: 22px;
+    box-shadow: #474747 6px 8px 8px;
+    border: 1px solid #F26853;
+}
+
+.add-column h1 {
+    width: 100%;
+    height: 50px;
+    background-color: #F26853;
+    border-radius: 20px 20px 0 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    border-bottom: 1px solid #53ddf2;
+}
+
+.addForm {
+    /* background-color: yellow; */
+    height: 70%;
+    width: 90%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    
+}
+
+.addForm input {
+    width: 100%;
+    height: 35px;
+    border: #53ddf2 1.5px solid;
+    border-radius: 5px;
+    text-indent: 0.4rem;
+    font-size: 0.9rem;
+}
+
+.addForm button {
+    width: 50%;
+    border: none;
+    height: 35px;
+    padding: 0 0.3rem;
+    background-color: #F26853;
+    color: #fff;
+}
+
+.pageCreateCtn {
+    /* background-color: #F26853; */
+    border: 1px solid #53ddf2;
+    border-radius: 20px 20px 40px 40px;
+    width: 75%;
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: self-start;
+    box-shadow: #474747 6px 8px 8px;
+}
+
+.creatingCardDiv {
+    background-color: white;
+    width: 60%;
+    margin-left: 1rem;
+    height: 70%;
+    border-radius: 20px;
+    overflow: hidden;
+    border: 1px #53ddf2 solid;
+    box-shadow: #474747 6px 8px 8px;
+}
+
+.cardImage {
+    background-color: #53ddf2;
+    height: 60%;
+}
+
+
+.cardImage img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.pageTitle {
+    background-color: #53ddf287;
+    width: 100%;
+    height: 20%;
+    border-radius: 18px 18px 0 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2.5rem;
+}
+
+.createCardText {
+    background-color: white;
+    /* border: #53ddf2 solid 1px; */
+    height: 40%;
+    width: 100%;
+    margin-left: 1rem;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.createCategory {
+    display: flex;
+    justify-content: flex-start;
+    /* background-color: #53ddf2; */
+    width: 50%;
+    height: auto;
+}
+
+.createCardText h3{
+    font-size: 25px;
+    width: auto;
+    background-color: #F26853;
+    height: auto;
+    display: flex;
+    margin-top: 0.3rem;
+    align-items: center;
+}
+
+.createCategory h4{
+    margin-top: 0.4rem;
+    margin-bottom: 0.3rem;
+    margin-right: 1rem;
+    background-color: #F26853;
+    padding: 0 5px 0 5px;
+    width: auto;
+    border-radius: 20px;
+}
+
+.createDescription {
+    background-color: white;
+    border-radius: 15px;
+    border: 1px #53ddf2 solid;
+    height: 70%;
+    width: 30%;
+    margin-right: 1rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: flex-start;
+    text-align: center;
+    box-shadow: #474747 6px 8px 8px;
+}
+
+.createDescription h3 {
+    width: 100%;
+    margin-top: 1rem;
+    margin-bottom: 3rem;
+}
+
+.createDescription p {
+    white-space: normal;
+    width: 100%;
+    height: 15rem;
+    margin-top: 1rem;
+    margin-bottom: 3rem;
 }
