--- a/src/pages/dashboard/Dashboard.css
+++ b/src/pages/dashboard/Dashboard.css
@@ -1,7 +1,7 @@
 .dashboard-ctn {
     background-color: white;
     width: 100vw;
-    height: 150vh;
+    height: 160vh;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -11,7 +11,7 @@
 .top-div {
     /* background-color: aquamarine; */
     width: 100%;
-    height: 20%;
+    height: 18%;
     display: flex;
     justify-content: center;
     background-color: #faf9f6;
@@ -223,6 +223,11 @@
     color: white;
     margin-left: 1rem;
     margin-right: 1rem;
+    text-shadow:
+		-1px -1px 0 #000,
+		1px -1px 0 #000,
+		-1px 1px 0 #000,
+		1px 1px 0 #000;
 }
 
 .categoriesTabs {
@@ -230,12 +235,12 @@
     justify-content: space-between;
     /* background-color: #ABC9D5; */
     width: 85%;
+
 }
 
 .categories h5 {
     margin-left: 1rem;
-    margin-right: 3rem;
-    /* background-color: #ABC9D5; */
+    /* background-color: red; */
     width: 100px;
     height: 30px;
     transition: 0.5s;
@@ -269,13 +274,12 @@
 }
 
 .categoryCard {
-    background-color: darkorchid;
+    /* background-color: darkorchid; */
     /* background-image: url('../../imgs/dashboard/steak.jpg'); */
     background-size: cover;
     height: 250px;
     width: 250px;
     border-radius: 10px;
-    color: white;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
@@ -284,6 +288,7 @@
     box-shadow: #474747 6px 8px 8px;
     transition: 0.5s;
     margin-right: 0.5rem;
+    margin-bottom: 2rem;
 }
 
 .categoryCard:hover {
@@ -291,9 +296,19 @@
     z-index: 2;
 }
 
+.categoryCardImg {
+    background-color: black;
+    height: 60%;
+}
+
+.categoryCardImg img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
 .categoryCardText {
     background-color: white;
-    /* background-color: #F26853; */
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
@@ -319,7 +334,8 @@
 }
 
 .categoryCardText .cuisine {
-    width: 25%;
+    width: auto;
+    padding: 0 0.15rem;
     text-align: center;
     background-color: #F26853;
     color: white;
