--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -13,6 +13,7 @@
     background-color: white;
     border-radius: 15px;
     width: 30vw;
+    min-width: 400px;
     height: 70vh;
     display: flex;
     flex-wrap: wrap;
