--- a/src/pages/results/Results.css
+++ b/src/pages/results/Results.css
@@ -75,7 +75,6 @@
     height: 50%;
     display: flex;
     flex-wrap: wrap;
-    overflow-y: scroll;
 }
 
 .resultsTitle {
@@ -95,7 +94,7 @@
     justify-content: center;
     flex-wrap: wrap;
     flex-direction: column;
-    overflow-y: scroll;
+    overflow-y: hidden;
 }
 
 .resultsCards > .categoryCard {
@@ -119,6 +118,10 @@
     overflow: hidden;
     box-shadow: #474747 6px 8px 8px;
     transition: 0.5s;
+}
+
+.resultCard:hover {
+        transform: scale(1.1);
 }
 
 .resultCard img {
