--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 9vh;
+    height: 64px;
     width: 100%;
     box-shadow: #474747 0px 4px 8px;
     z-index: 2;
@@ -42,8 +42,8 @@
 }
 
 .logo img {
-    width: 50px;
-    height: 100%;
+    width: 35px;
+    height: 50px;
 }
 
 .nav-list {
