--- a/src/pages/addMeal/AddMeal.css
+++ b/src/pages/addMeal/AddMeal.css
@@ -1,5 +1,4 @@
 .add-page-ctn {
-    /* background-color: darkcyan; */
     height: 100%;
     width: 100%;
     display: flex;
@@ -8,7 +7,6 @@
 }
 
 .add-page-div {
-    /* background-color: darkblue; */
     width: 80%;
     height: 50%;
     display: flex;
@@ -16,11 +14,9 @@
     align-content: space-between;
     flex-wrap: wrap;
     border-radius: 40px;
-    /* box-shadow: #474747 6px 8px 8px; */
 }
 
 .add-column {
-    /* background-color: rebeccapurple; */
     height: 100%;
     width: 23%;
     display: flex;
@@ -44,7 +40,6 @@
 }
 
 .addForm {
-    /* background-color: yellow; */
     height: 70%;
     width: 90%;
     display: flex;
@@ -72,7 +67,6 @@
 }
 
 .pageCreateCtn {
-    /* background-color: #F26853; */
     border: 1px solid #53ddf2;
     border-radius: 20px 20px 40px 40px;
     width: 75%;
@@ -96,7 +90,7 @@
 }
 
 .cardImage {
-    background-color: #53ddf2;
+    background-color: #000000;
     height: 60%;
 }
 
@@ -120,7 +114,6 @@
 
 .createCardText {
     background-color: white;
-    /* border: #53ddf2 solid 1px; */
     height: 40%;
     width: 100%;
     margin-left: 1rem;
@@ -133,7 +126,6 @@
 .createCategory {
     display: flex;
     justify-content: flex-start;
-    /* background-color: #53ddf2; */
     width: 50%;
     height: auto;
 }
@@ -141,7 +133,6 @@
 .createCardText h3{
     font-size: 25px;
     width: auto;
-    /* background-color: #F26853; */
     height: auto;
     display: flex;
     margin-top: 0.3rem;
