--- a/src/pages/dashboard/Dashboard.css
+++ b/src/pages/dashboard/Dashboard.css
@@ -14,7 +14,6 @@ html {
 }
 
 .top-div {
-    /* background-color: aquamarine; */
     width: 100%;
     height: 18%;
     display: flex;
@@ -52,7 +51,6 @@ html {
 }
 
 .search-icon {
-    /* background-color: violet; */
     height: 80%;
     width: 60px;
     font-size: 1.5rem;
@@ -71,7 +69,6 @@ html {
 }
 
 .search-bar {
-    /* background-color: rgb(49, 49, 20); */
     height: 70%;
     width: 239px;
     display: flex;
@@ -80,7 +77,6 @@ html {
 }
 
 .addCardDiv {
-    /* background-color: brown; */
     width: 80%;
     height: 6%;
     margin: 1rem 0;
@@ -100,13 +96,11 @@ html {
 
 
 .trending-div-title {
-    /* background-color: tomato; */
     width: 80%;
     height: 25px;
 }
 
 .trending-div {
-    /* background-color: darkgoldenrod; */
     width: 95%;
     height: 250px;
     display: flex;
@@ -120,7 +114,6 @@ html {
 
 
 .trendingFoodCard {
-    /* background-color: darkkhaki; */
     background-size: cover;
     border-radius: 20px;
     width: 300px;
@@ -132,13 +125,12 @@ html {
 
 
 .trendingFoodCardImg {
-    /* background-color: #F26853; */
     border-radius: 20px 20px 20px 20px;
     width: 100%;
     height: 150px;
 }
 
-.trendingFoodCardImg img{
+.trendingFoodCardImg img {
     width: 100%;
     height: 150px;
     object-fit: cover;
@@ -146,7 +138,6 @@ html {
 }
 
 .trendingFoodCardText {
-    /* background-color: rgba(0, 0, 0, 0.519); */
     width: 100%;
     height: 50px;
 }
@@ -180,7 +171,6 @@ html {
 }
 
 .createCard {
-    /* background-color: #ABC9D5; */
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -189,7 +179,6 @@ html {
 }
 
 .addCardPlus {
-    /* background-color: darkolivegreen; */
     width: 100%;
     height: 40%;
     display: flex;
@@ -200,7 +189,6 @@ html {
 }
 
 .addCardText {
-    /* background-color: darkblue; */
     width: 100%;
     height: 40%;
 }
@@ -225,28 +213,25 @@ html {
 }
 
 .categories h4 {
-    /* background-color: #474747; */
     color: white;
     margin-left: 1rem;
     margin-right: 1rem;
     text-shadow:
-		-1px -1px 0 #000,
-		1px -1px 0 #000,
-		-1px 1px 0 #000,
-		1px 1px 0 #000;
+        -1px -1px 0 #000,
+        1px -1px 0 #000,
+        -1px 1px 0 #000,
+        1px 1px 0 #000;
 }
 
 .categoriesTabs {
     display: flex;
     justify-content: space-between;
-    /* background-color: #ABC9D5; */
     width: 85%;
 
 }
 
 .categories h5 {
     margin-left: 1rem;
-    /* background-color: red; */
     width: 100px;
     height: 30px;
     transition: 0.5s;
@@ -262,7 +247,7 @@ html {
 
 .cuisineTabs:hover {
     box-shadow: inset 100px 0 0 #fff;
-    
+
 }
 
 .activeCuisineTab {
@@ -271,7 +256,6 @@ html {
 }
 
 .categoryCardDiv {
-    /* background-color: sandybrown; */
     width: 85%;
     height: 50%;
     display: flex;
@@ -280,8 +264,6 @@ html {
 }
 
 .categoryCard {
-    /* background-color: darkorchid; */
-    /* background-image: url('../../imgs/dashboard/steak.jpg'); */
     background-size: cover;
     height: 250px;
     width: 250px;
@@ -323,15 +305,14 @@ html {
     height: 40%;
 }
 
-.categoryCardText > h3, .categoryCardText > p {
-    /* background-color: darkcyan; */
+.categoryCardText>h3,
+.categoryCardText>p {
     width: 100%;
     color: black;
     margin-left: 1rem;
 }
 
 .categoryCardText h3 {
-    /* background-color: darkgoldenrod; */
     font-size: 16px;
 }
 
@@ -355,5 +336,5 @@ html {
 
 
 .categoryCardText .cuisine:nth-child(2) {
-   background-color: #53ddf2;
+    background-color: #53ddf2;
 }
