Various css changed imgs added

--- a/src/pages/UserDash/UserDash.css
+++ b/src/pages/UserDash/UserDash.css
@@ -109,3 +109,7 @@
   width: 50%;
   background-color: chartreuse;
 }
+
+.meal-div-card-ctn2 > .trendingFoodCard > .trendingFoodCardImg {
+  padding-bottom: 0.5rem;
+}
