--- a/src/pages/addMeal/AddMeal.css
+++ b/src/pages/addMeal/AddMeal.css
@@ -81,6 +81,7 @@
     align-items: self-start;
     box-shadow: #474747 6px 8px 8px;
     background-color: white;
+    min-width: 300px;
 }
 
 .creatingCardDiv {
@@ -181,4 +182,74 @@
     height: 15rem;
     margin-top: 1rem;
     margin-bottom: 3rem;
+}
+
+
+
+@media screen and (max-width: 850px){
+    .add-page-div {
+        height: 90%;
+        width: 100%;
+        flex-wrap: wrap;
+        flex-direction: row;
+        justify-content: center;
+        align-content: space-around;
+    }
+
+    .add-column {
+        height: 40%;
+        width: 70%;
+        overflow-y: scroll;
+    }
+
+    .pageCreateCtn {
+        height: 50%;
+    }
+}
+
+
+@media screen and (max-width: 480px){
+
+    .add-page-div {
+        align-content: flex-start;
+    }
+
+    
+
+    .pageCreateCtn {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        align-items: flex-start;
+        justify-content: center;
+    }
+
+    .creatingCardDiv {
+        width: 80%;
+    }
+
+    .pageTitle {
+        font-size: 2rem;
+        height: 3rem;
+    }
+
+    .createDescription {
+        display: none;
+    }
+
+}
+
+
+@media screen and (max-width: 370px){
+    .add-column {
+        min-width: none;
+        height: 30%;
+        width: 250px;
+        overflow-y: scroll;
+        margin-bottom: 3rem;
+    }
+
+    .pageCreateCtn {
+        height: 40%;
+    }
 }
