--- a/src/pages/addMeal/AddMeal.css
+++ b/src/pages/addMeal/AddMeal.css
@@ -184,6 +184,16 @@
     margin-bottom: 3rem;
 }
 
+.select {
+    width: 100%;
+    margin-top: 0.2rem;
+    margin-bottom: 0.2rem;
+    border-radius: 5px;
+    outline: none;
+    border: 1px #53ddf2 solid;
+    height: 1.90rem;
+}
+
 
 
 @media screen and (max-width: 850px){
