--- a/src/App.css
+++ b/src/App.css
@@ -66,3 +66,116 @@
 a {
     text-decoration: none;
 }
+
+/* Position and sizing of burger button */
+.bm-burger-button {
+    /* position: fixed;
+    width: 36px;
+    height: 30px;
+    right: 36px;
+    top: 36px; */
+    position: relative;
+    width: 36px;
+    height: 36px;
+    margin-right: 3rem;
+    margin-top: 1.2rem;
+    margin-bottom: 0.5rem;
+    display: none;
+  }
+  
+  /* Color/shape of burger icon bars */
+  .bm-burger-bars {
+    background: white;
+  }
+  
+  /* Color/shape of burger icon bars on hover*/
+  .bm-burger-bars-hover {
+    background: #00c2df;
+  }
+  
+  /* Position and sizing of clickable cross button */
+  .bm-cross-button {
+    height: 24px;
+    width: 24px;
+  }
+  
+  /* Color/shape of close button cross */
+  .bm-cross {
+    background: #00c2df;
+  }
+  
+  /*
+  Sidebar wrapper styles
+  Note: Beware of modifying this element as it can break the animations - you should not need to touch it in most cases
+  */
+  .bm-menu-wrap {
+    position: fixed;
+    height: 100%;
+  }
+  
+  /* General sidebar styles */
+  .bm-menu {
+    background: #000000;
+    padding: 2.5em 1.5em 0;
+    font-size: 1.15em;
+  }
+  
+  /* Morph shape necessary with bubble or elastic */
+  .bm-morph-shape {
+    fill: #373a47;
+  }
+  
+  /* Wrapper for item list */
+  .bm-item-list {
+    color: #b8b7ad;
+    display: flex;
+    flex-direction: column;
+    padding: 0.8em;
+  }
+  
+  /* Individual item */
+  .bm-item {
+    display: inline-block;
+  }
+  
+  /* Styling of overlay */
+  .bm-overlay {
+    background: rgba(0, 0, 0, 0.3);
+  }
+
+
+  /* Individual item */
+.bm-item {
+    display: inline-block;
+  
+    color: white;
+    margin-bottom: 4rem;
+    text-align: left;
+    text-decoration: none;
+    transition: color 0.2s;
+  }
+  
+  .bm-item:hover {
+    color: #ffffff;
+  }
+
+
+  @media screen and (max-width: 1000px) {
+
+    .links {
+        justify-content: space-between;
+    }
+
+    .nav-items {
+      display: none;
+    }
+
+    .nav-list { 
+        display: none;
+    }
+
+    .bm-burger-button {
+      display:block ;
+    }
+
+  }
